# gazeebo

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
docs/: architecture.md  customizing.md  training.md
nix/checks/: default.nix
nix/flake/: dev-partition.nix
src/: hud_native.c
src/gazeebo/: __init__.py  adaptation.py  calibration.py  camera.py  cli.py  contexts.py  contracts.py  control.py  game.py  geometry.py  hud.py  native.py  portal.py  runtime.py  state.py  vision.py
tests/: __init__.py  fakes.py  test_adaptation.py  test_camera.py  test_cli.py  test_contexts.py  test_contracts.py  test_control.py  test_game.py  test_geometry.py  test_hud.py  test_persistence_runtime.py  test_portal.py  test_runtime.py  test_state.py  test_vision.py
