[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gazeebo"
version = "0.1.0"
description = "Local gaze-driven cursor navigation for Linux desktops"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = ["dbus-next>=0.2.3"]

[project.scripts]
gazeebo = "gazeebo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["FBT003", "PLR2004", "PT009", "PT027", "S101"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["gazeebo"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
